--- a/frontend/src/app/page/car-edit/car-edit.component.html
+++ b/frontend/src/app/page/car-edit/car-edit.component.html
@@ -1,6 +1,32 @@
 <div class="row">
-  <div class="col-6 offset-3 mt-3">
-    <form>
+  <div class="col-6 offset-3 mt-3"
+    *ngIf="(car$ | async) as car">
+    <form #carEditForm="ngForm" (ngSubmit)="onUpdate(carEditForm)">
+      <div class="form-group">
+        <label for="">Model</label>
+        <input class="form-control" type="text" name="model"
+          [(ngModel)]="car.model">
+      </div>
+      <div class="form-group">
+        <label for="">Year</label>
+        <input class="form-control" type="number" name="year"
+          [(ngModel)]="car.year">
+      </div>
+      <div class="form-group">
+        <label for="">Maker</label>
+        <input class="form-control" type="text" name="maker"
+          [(ngModel)]="car.maker">
+      </div>
+      <div class="form-group">
+        <label for="">Price</label>
+        <input class="form-control" type="number" name="price"
+          [(ngModel)]="car.price">
+      </div>
+
+      <button type="submit" [disabled]="carEditForm.invalid" class="btn btn-primary w-100 mt-3 mb-3">
+        <i class="fas fa-save"></i>
+        Update the Car
+      </button>
     </form>
   </div>
 </div>
